# mongo-db-tools

./: .env.example  Dockerfile  README.md  compose.yaml
app/: main.py  pyproject.toml  requirements.txt
app/api/v1/routers/: database.py
app/core/: config.py  platfom_integration_client.py
app/core/authentication/: auth_middleware.py  auth_token.py  subscription.py
app/schemas/: database.py  token.py
